添加文字位置控制添加文档

--- a/VTable.html
+++ b/VTable.html
@@ -7,7 +7,7 @@
 	
 	<style type="text/css">
 		#show-table {
-			width: 300px;
+			width: 500px;
 			height: 600px;
 			margin: 0 auto;
 			border: 1px solid #ddd;
@@ -42,23 +42,25 @@
 		var header = [
 			{
 				"text": "Q1",
-				"width": 100
+				"width": 200,
+				"textAlign": "center"
 			},
 			{
 				"text": "Q2",
-				"width": 100
+				"width": 200,
+				"textAlign": "right"
 			},
 			{
 				"text": "Q3",
-				"width": 100
+				"width": 200
 			},
 			{
 				"text": "Q4",
-				"width": 100
+				"width": 200
 			},
 			{
 				"text": "总结",
-				"width": 100
+				"width": 200
 			}
 		];
 
