细节功能修改
1.解决异步加载数据不能刷新表头与侧边
2.修改渲染内容为 html，支持自定义html代码

--- a/VTable Pro.html
+++ b/VTable Pro.html
@@ -47,7 +47,7 @@
 				"type": "leftAside"
 			},
 			{
-				"text": "2017",
+				"text": "<h1>2017</h1>",
 				"children": [
 					{
 						"text": "Q1",
@@ -126,283 +126,7 @@
 		];
 
 		// 表格的侧边
-		var leftAside = [
-			{
-				"text": "1A",
-				"children": [
-					{
-						"text": "1A-1B",
-						"children": [
-							{
-								"text": "1A-1C",
-								"children": [
-									{
-										"text": "1A-1D"
-									},
-									{
-										"text": "1A-2D"
-									}
-								]
-							},
-							{
-								"text": "1A-2C"
-							}
-						]
-					},
-					{
-						"text": "1A-2B",
-						"children": [
-							{
-								"text": "nZBusCv",
-								"children": [
-									{
-										"text": "hLBfeC"
-									},
-									{
-										"text": "gCYaNz"
-									}
-								]
-							},
-							{
-								"text": "WJf"
-							}
-						]
-					},
-					{
-						"text": "1A-3B"
-					},
-					{
-						"text": "1A-4B"
-					},
-					{
-						"text": "1A-5B"
-					},
-					{
-						"text": "1A-6B"
-					}
-				]
-			},
-			{
-				"text": "2A",
-				"children": [
-					{
-						"text": "bmrUOXMWj",
-						"children": [
-							{
-								"text": "aSh",
-								"children": [
-									{
-										"text": "UBjDvGqI"
-									},
-									{
-										"text": "rEddXwlZO"
-									}
-								]
-							},
-							{
-								"text": "GU"
-							}
-						]
-					},
-					{
-						"text": "MipxprHWC",
-						"children": [
-							{
-								"text": "vNt",
-								"children": [
-									{
-										"text": "wGcaOkeVl"
-									},
-									{
-										"text": "ogO"
-									}
-								]
-							},
-							{
-								"text": "CiRguNc"
-							}
-						]
-					},
-					{
-						"text": 10
-					},
-					{
-						"text": 72
-					},
-					{
-						"text": 69
-					},
-					{
-						"text": 97
-					}
-				]
-			},
-			{
-				"text": "3A",
-				"children": [
-					{
-						"text": "BGBlfymE",
-						"children": [
-							{
-								"text": "fWgPYk",
-								"children": [
-									{
-										"text": "qV"
-									},
-									{
-										"text": "AqnasSe"
-									}
-								]
-							},
-							{
-								"text": "gStEYv"
-							}
-						]
-					},
-					{
-						"text": "TfcMSrFr",
-						"children": [
-							{
-								"text": "Wj",
-								"children": [
-									{
-										"text": "f"
-									},
-									{
-										"text": "Fhf"
-									}
-								]
-							},
-							{
-								"text": "Ggkkk"
-							}
-						]
-					},
-					{
-						"text": 13
-					},
-					{
-						"text": 49
-					},
-					{
-						"text": 13
-					},
-					{
-						"text": 26
-					}
-				]
-			},
-			{
-				"text": "4A",
-				"children": [
-					{
-						"text": "svYGlis",
-						"children": [
-							{
-								"text": "ovgSTgn",
-								"children": [
-									{
-										"text": "qyWhc"
-									},
-									{
-										"text": "ysBIp"
-									}
-								]
-							},
-							{
-								"text": "GuYd"
-							}
-						]
-					},
-					{
-						"text": "LWlQPHEuam",
-						"children": [
-							{
-								"text": "vpf",
-								"children": [
-									{
-										"text": "EhlYlzF"
-									},
-									{
-										"text": "PIylkdRYV"
-									}
-								]
-							},
-							{
-								"text": "YxOey"
-							}
-						]
-					},
-					{
-						"text": 16
-					},
-					{
-						"text": 87
-					},
-					{
-						"text": 55
-					},
-					{
-						"text": 11
-					}
-				]
-			},
-			{
-				"text": "5A",
-				"children": [
-					{
-						"text": "qtMRc",
-						"children": [
-							{
-								"text": "SCkLxR",
-								"children": [
-									{
-										"text": "QiEIig"
-									},
-									{
-										"text": "bj"
-									}
-								]
-							},
-							{
-								"text": "qnsolFL"
-							}
-						]
-					},
-					{
-						"text": "pgUrRbIB",
-						"children": [
-							{
-								"text": "cqG",
-								"children": [
-									{
-										"text": "s"
-									},
-									{
-										"text": "wmRAaltTGN"
-									}
-								]
-							},
-							{
-								"text": "bZuLRQg"
-							}
-						]
-					},
-					{
-						"text": 29
-					},
-					{
-						"text": 60
-					},
-					{
-						"text": 69
-					},
-					{
-						"text": 22
-					}
-				]
-			}
-		];
+		var leftAside = [];
 
 		// 加载 VTable 表格
 		$('.tem-mod').load('src/template.html', function() {
@@ -414,7 +138,10 @@
 					// 表格中间内容
 					tableData: {},
 					// 表格的头信息
-					tableHeader: header,
+					tableHeader: [{
+						text: 'a',
+						width: 1000
+					}],
 					// 表格侧边
 					tableLeft: {
 						// 表格侧边数据 
@@ -442,6 +169,24 @@
 					})
 
 				}
+			})
+
+
+			$.ajax({
+				url: 'mock/aside.json',
+				type: 'get'
+			})
+			.done(aside => {
+				console.warn('data')
+				table.tableLeft.data = aside
+
+				header[0].text = ''
+				// table.tableHeader = [{text: 'a'}]
+				table.tableHeader = header
+				Vue.set(table.tableLeft, 'data', aside)
+			})
+			.fail(err => {
+				console.error(err)
 			})
 			
 		})
