--- a/add.html
+++ b/add.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>复杂表格</title>
+	<title>动态添加行</title>
 	<!-- 表格样式 -->
 	<link rel="stylesheet" type="text/css" href="src/VTable.css">
 	
 	<style type="text/css">
 		#show-table {
-			width: 1000px;
-			height: 600px;
+			width: 700px;
+			height: 500px;
 			margin: 0 auto;
 			border: 1px solid #ddd;
 		}
@@ -20,8 +20,8 @@
 	<div id="show-table">
 		<!-- 使用 VTable 组件生成表格 -->
 		<v-table 
+			ref="textTable"
 			:header="tableHeader" 
-			:left="tableLeft" 
 			:data="tableData"
 		></v-table>
 	</div>
@@ -42,83 +42,35 @@
 		// 表格头
 		var header = [
 			{
-				"text": "_aside_",
-				"width": 400,
-				"type": "leftAside"
-			},
-			{
-				"text": "<h1>2017</h1>",
+				"text": "Q1",
 				"children": [
 					{
-						"text": "Q1",
-						"children": [
-							{
-								"text": "1月",
-								"width": 100
-							},
-							{
-								"text": "2月",
-								"width": 100
-							},
-							{
-								"text": "3月",
-								"width": 100
-							}
-						]
+						"text": "1月",
+						"width": 100
 					},
 					{
-						"text": "Q2",
-						"children": [
-							{
-								"text": "4月",
-								"width": 100
-							},
-							{
-								"text": "5月",
-								"width": 100
-							},
-							{
-								"text": "6月",
-								"width": 100
-							}
-						]
+						"text": "2月",
+						"width": 100
 					},
 					{
-						"text": "Q3",
-						"children": [
-							{
-								"text": "7月",
-								"width": 100
-							},
-							{
-								"text": "8月",
-								"width": 100
-							},
-							{
-								"text": "9月",
-								"width": 100
-							}
-						]
+						"text": "3月",
+						"width": 100
+					}
+				]
+			},
+			{
+				"text": "Q2",
+				"children": [
+					{
+						"text": "4月",
+						"width": 100
 					},
 					{
-						"text": "Q4",
-						"children": [
-							{
-								"text": "10月",
-								"width": 100
-							},
-							{
-								"text": "11月",
-								"width": 100
-							},
-							{
-								"text": "12月",
-								"width": 100
-							}
-						]
+						"text": "5月",
+						"width": 100
 					},
 					{
-						"text": "总结",
+						"text": "6月",
 						"width": 100
 					}
 				]
@@ -127,16 +79,17 @@
 
 		// 表格的侧边
 		var leftAside = [];
+		var table = null
 
 		// 加载 VTable 表格
 		$('.tem-mod').load('src/template.html', function() {
 
 			// 完成后，我们开始生成表格内容
-			var table = new Vue({
+			table = new Vue({
 				el: '#show-table',
 				data: {
 					// 表格中间内容
-					tableData: {},
+					tableData: [],
 					// 表格的头信息
 					tableHeader: [{
 						text: 'a',
@@ -155,7 +108,7 @@
 
 					// 加载数据
 					$.ajax({
-						url: 'mock/hasLeft.json',
+						url: 'mock/add.json',
 						type: 'get'
 					})
 					.done(function(data) {
@@ -179,8 +132,6 @@
 			.done(aside => {
 				table.tableLeft.data = aside
 
-				header[0].text = ''
-				// table.tableHeader = [{text: 'a'}]
 				table.tableHeader = header
 				Vue.set(table.tableLeft, 'data', aside)
 			})
@@ -189,6 +140,40 @@
 			})
 			
 		})
+
+		$(function() {
+			$('#show-table').on('click', '.dev', function(e) {
+				console.log('研究中心')
+
+				addDom(this, '<h1>研究中心最牛</h1>')
+			})
+
+			$('#show-table').on('click', '.pro', function(e) {
+				console.log('市场部')
+
+				addDom(this, '<h1>市场部最牛</h1>')
+			})
+			
+		})
+
+		function addDom (el, data) {
+			var index = $(el).parents('tr').index()
+
+			if (el.dataset.type) {
+				table.$refs.textTable.remove(index + 1, data)
+				
+				el.dataset.type = ''
+
+				$(el).html('+')
+			} else {
+				table.$refs.textTable.insert(index, data)
+				
+				el.dataset.type = 'add'
+
+				$(el).html('-')
+			}
+		}
+
 	</script>
 
 </body>
