--- a/addAsync.html
+++ b/addAsync.html
@@ -107,13 +107,7 @@
 				mounted: function () {
 					var _ = this;
 
-					// 加载数据
-					$.ajax({
-						url: 'mock/addAsync.json',
-						type: 'get'
-					})
-					.done(function(data) {
-
+					ajaxData(function(data) {
 						var arr = []
 						// 因为是异步的，数据的展开内容并没有返回给我们
 						// 我们要自己添加上占位
@@ -129,20 +123,20 @@
 						})
 						// 赋值给表格
 						_.tableData = arr
-
-					})
-					.fail(function(err) {
-						// 请求数据错误时
-						console.error(err)
 					})
 
 				},
 				methods: {
 					toggleEvt: function(data) {
-						this.tableData.splice(data.tr.index +1, 1, [{
-							text: '<h1>'+ data.td.data.text +'最牛</h1>',
-							cols: 111
-						}])
+						// this.tableData.splice(data.tr.index +1, 1, [{
+						// 	text: '<h1>'+ data.td.data.text +'最牛</h1>',
+						// 	cols: 111
+						// }])
+						var _ = this
+						
+						ajaxData(function(data) {
+							console.log(data)
+						})
 					}
 				}
 			})
@@ -153,6 +147,22 @@
 			}, 3000)
 			
 		})
+
+		function ajaxData (callback) {
+			// 加载数据
+			$.ajax({
+				url: 'mock/addAsync.json',
+				type: 'get'
+			})
+			.done(function(data) {
+				callback(data)
+
+			})
+			.fail(function(err) {
+				// 请求数据错误时
+				console.error(err)
+			})			
+		}
 
 	</script>
 
