--- a/src/template.html
+++ b/src/template.html
@@ -66,7 +66,12 @@
 									:rowspan="td.rowspan"
 									:style="{textAlign: bodyTextAlign[key]}"
 								>
-									<div class="v-table-td-inner">
+									<div :class="[
+										'v-table-td-inner', 
+										{ 
+											'expand-box': expandBody && key === 0 
+										}
+									]">
 										<i 
 											v-if="'expand' in row && key === 0" 
 											:class="[row.expand ? 'open': 'close']"
