--- a/VTable.html
+++ b/VTable.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>简单表格</title>
 	<!-- 表格样式 -->
 	<link rel="stylesheet" type="text/css" href="src/VTable.css">
