--- a/addAsync.html
+++ b/addAsync.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>异步数据展开收缩功能</title>
 	<!-- 表格样式 -->
 	<link rel="stylesheet" type="text/css" href="src/VTable.css">
