--- a/VTable.html
+++ b/VTable.html
@@ -42,6 +42,8 @@
 	<script src="src/VTable.js"></script>
 
 	<script>
+		// https://cn.vuejs.org/v2/api/#devtools
+		Vue.config.devtools = true;
 
 		// 表格头
 		var header = [
